[package]
name = "decimal-bench"
version = "0.1.0"
authors = ["David Li <davidli2010@foxmail.com>"]
edition = "2018"

[dev-dependencies]
bencher = "0.1.5"
pgnumeric = "0.2.1"
rust_decimal = { version = "1.18.0", features = ["maths"] }
bigdecimal = "0.3.0"
decimal-rs = "0.1.24"
num-traits = "0.2.14"

[[bench]]
name = "benchmark"
harness = false
